# Intelligent-file-deduplicator

./: Cargo.toml  README .md  README.md  duplicates_report.json
Static/: index.html
src/: content_similarity.rs  filter.rs  hashing.rs  image_similarity.rs  main.rs  quarantine.rs  report.rs  scanner.rs
