[package]
name = "project-1"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
sha2 = "0.10"
blake3 = "1.3"
twox-hash = "2.1.1"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11.1"
image = "0.25.5"
img_hash = "3.2"
actix-web = "4"
actix-multipart = "0.6"
actix-files = "0.6"
futures-util = "0.3"
tempfile = "3"